# python-cpn-opensearch

./: ChangeLog  README.md  requirements.txt  setup.cfg
src/: __init__.py  cpnsearch.py
src/common/: clients.py
