[metadata]
name = cpnsearch
author = Open Telekom Cloud - Ecosystem Squad
author_email = dl-pbcotcdeleco@t-systems.com
description = Python program to index Circle Partner Navigator data into Opensearch
description_file =
    README.md
home_page = https://github.com/opentelekomcloud/python-cpn-opensearch
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = Opensearch, Strapi, Circle Partner Navigator, search, python

[options]
packages = src

[options.entry_points]
console_scripts =
  cpnsearch = src.cpnsearch:main
